Apply new Modernizer rules for empty collections